fix(json): validate hosted codec definition context